--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
 
         <!-- Main Slider Start -->
         <div class="home-slider">
+            {% for slide in sliders %}
             <div class="main-slider">
-                <div class="main-slider-item"><img src="img/slider-1.jpg" alt="Slider Image" /></div>
-                <div class="main-slider-item"><img src="img/slider-2.jpg" alt="Slider Image" /></div>
-                <div class="main-slider-item"><img src="img/slider-3.jpg" alt="Slider Image" /></div>
+                <div class="main-slider-item"><img src="{{slide.image.url}}" alt="Slider Image" /></div>
             </div>
+            {% endfor %}
         </div>
         <!-- Main Slider End -->
         
@@ -17,42 +17,17 @@
         <div class="feature">
             <div class="container-fluid">
                 <div class="row">
+                    {% for feature in features %}
                     <div class="col-lg-3 col-md-6 feature-col">
                         <div class="feature-content">
-                            <i class="fa fa-shield"></i>
-                            <h2>Trusted Shopping</h2>
+                            <i class="fa fa-{{feature.logo}}"></i>
+                            <h2>{{feature.name}}</h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                                {{feature.description}}
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 feature-col">
-                        <div class="feature-content">
-                            <i class="fa fa-shopping-bag"></i>
-                            <h2>Quality Product</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 feature-col">
-                        <div class="feature-content">
-                            <i class="fa fa-truck"></i>
-                            <h2>Worldwide Delivery</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 feature-col">
-                        <div class="feature-content">
-                            <i class="fa fa-phone"></i>
-                            <h2>Telephone Support</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            </p>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -63,36 +38,16 @@
         <div class="category">
             <div class="container-fluid">
                 <div class="row">
+                    {% for cat in categories %}
                     <div class="col-md-4">
                         <div class="category-img">
-                            <img src="img/category-1.jpg" />
+                            <img src="{{cat.image.url}}" />
                             <a class="category-name" href="">
-                                <h2>Category Name</h2>
+                                <h2>{{cat.name}}</h2>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="category-img">
-                            <img src="img/category-3.jpg" />
-                            <a class="category-name" href="">
-                                <h2>Category Name</h2>
-                            </a>
-                        </div>
-                        <div class="category-img">
-                            <img src="img/category-4.jpg" />
-                            <a class="category-name" href="">
-                                <h2>Category Name</h2>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="category-img">
-                            <img src="img/category-2.jpg" />
-                            <a class="category-name" href="">
-                                <h2>Category Name</h2>
-                            </a>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -409,12 +364,9 @@
                     </p>
                 </div>
                 <div class="brand-slider">
-                    <div class="brand-item"><img src="img/brand-1.png" alt=""></div>
-                    <div class="brand-item"><img src="img/brand-2.png" alt=""></div>
-                    <div class="brand-item"><img src="img/brand-3.png" alt=""></div>
-                    <div class="brand-item"><img src="img/brand-4.png" alt=""></div>
-                    <div class="brand-item"><img src="img/brand-5.png" alt=""></div>
-                    <div class="brand-item"><img src="img/brand-6.png" alt=""></div>
+                    {% for brand in brands %}
+                    <div class="brand-item"><img src="{{brand.image.url}}" alt=""></div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
