--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -196,31 +196,25 @@
                         <div class="sidebar-widget category">
                             <h2 class="title">Category</h2>
                             <ul>
-                                <li><a href="#">Lorem Ipsum</a><span>(83)</span></li>
-                                <li><a href="#">Cras sagittis</a><span>(198)</span></li>
-                                <li><a href="#">Vivamus</a><span>(95)</span></li>
-                                <li><a href="#">Fusce vitae</a><span>(48)</span></li>
-                                <li><a href="#">Vestibulum</a><span>(210)</span></li>
-                                <li><a href="#">Proin phar</a><span>(78)</span></li>
+                                {% for cat in categories %}
+                                <li><a href="#">{{cat.name}}</a><span>(83)</span></li>
+                                {% endfor %}
                             </ul>
                         </div>
                         
                         <div class="sidebar-widget image">
                             <h2 class="title">Featured Product</h2>
                             <a href="#">
-                                <img src="img/category-1.jpg" alt="Image">
+                                <img src="{% static 'img/category-1.jpg' %}" alt="Image">
                             </a>
                         </div>
                         
                         <div class="sidebar-widget brands">
                             <h2 class="title">Our Brands</h2>
                             <ul>
-                                <li><a href="#">Nulla </a><span>(45)</span></li>
-                                <li><a href="#">Curabitur </a><span>(34)</span></li>
-                                <li><a href="#">Nunc </a><span>(67)</span></li>
-                                <li><a href="#">Ullamcorper</a><span>(74)</span></li>
-                                <li><a href="#">Fusce </a><span>(89)</span></li>
-                                <li><a href="#">Sagittis</a><span>(28)</span></li>
+                                {% for brand in brands %}
+                                <li><a href="#">{{brand.name}} </a><span>(45)</span></li>
+                                {% endfor %}
                             </ul>
                         </div>
                         
