--- a/templates/base.html
+++ b/templates/base.html
@@ -31,16 +31,18 @@
                 <div class="row align-items-center">
                     <div class="col-md-3">
                         <div class="logo">
-                            <a href="">
+                            <a href="index.html">
                                 <img src="{% static 'img/logo.png' %}" alt="Logo">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
+                        <form method="GET" action="/search_product">
                         <div class="search">
-                            <input type="text" placeholder="Search">
-                            <button><i class="fa fa-search"></i></button>
+                            <input name="query" type="text"  placeholder="Search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
                         </div>
+                        </form>
                     </div>
                     <div class="col-md-3">
                         <div class="user">
@@ -74,7 +76,7 @@
 
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav m-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="/" class="nav-item nav-link active">Home</a>
                             <a href="product-list.html" class="nav-item nav-link">Products</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
