--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,14 +27,16 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="login-form">
+                            <form method="POST">
+                                {% csrf_token %}
                             <div class="row">
                                 <div class="col-md-6">
-                                    <label>E-mail / Username</label>
-                                    <input class="form-control" type="text" placeholder="First Name">
+                                    <label>E-mail/Username</label>
+                                        <input name="username" class="form-control" type="text" placeholder="Email/Username">
                                 </div>
                                 <div class="col-md-6">
                                     <label>Password</label>
-                                    <input class="form-control" type="text" placeholder="Last Name">
+                                        <input name="password" class="form-control" type="password" placeholder="Password">
                                 </div>
                                 <div class="col-md-12">
                                     <div class="custom-control custom-checkbox">
@@ -43,35 +45,10 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <button class="btn">Submit</button>
+                                    <button type="submit" class="btn">Submit</button>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    
-                    <div class="col-md-6">    
-                        <div class="register-form">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <label>First Name</label>
-                                    <input class="form-control" type="text" placeholder="First Name">
-                                </div>
-                                <div class="col-md-6">
-                                    <label>Last Name"</label>
-                                    <input class="form-control" type="text" placeholder="Last Name">
-                                </div>
-                                <div class="col-md-6">
-                                    <label>E-mail</label>
-                                    <input class="form-control" type="text" placeholder="E-mail">
-                                </div>
-                                <div class="col-md-6">
-                                    <label>Mobile No</label>
-                                    <input class="form-control" type="text" placeholder="Mobile No">
-                                </div>
-                                <div class="col-md-12">
-                                    <button class="btn">Submit</button>
-                                </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
